# Project-Lumina

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pyproject.toml  setup.py  test_bids_data.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: getting_started.rst  index.rst
docs/api/: io.rst  physiology.rst  preprocessing.rst  utils.rst
examples/: example_basic_pipeline.py
nlcore/: README.md  __init__.py
nlcore/io/: __init__.py  snirf.py
nlcore/physiology/: __init__.py  chromophore.py  pbm.py
nlcore/preprocessing/: __init__.py  filtering.py  motion.py
nlcore/utils/: __init__.py  mne_compat.py
scripts/: init-db.sql
site/: site.json
site/src/lib/: api-gateway.ts  api-keys.ts  stripe.ts
site/src/routes/: auth.tsx  index.tsx  pricing.tsx
src/lib/: auth.ts  waitlist.ts
src/routes/: __root.tsx  dashboard.tsx  docs.tsx
src/styles/: app.css
tests/: __init__.py  test_bids_integration.py  test_chromophore.py  test_chromophore_edge_cases.py  test_pbm.py  test_preprocessing.py  test_snirf.py
training/: .gitignore  API_SPEC.md  MODEL_CARD.md  README.md  datamodule.py  export.py  inference.py  model.py  requirements.txt  train.py
