[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlcore"
version = "0.1.0"
description = "NeuroLumina Core — open-source Python library for HD-fNIRS and PBM signal processing"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "NeuroLumina Contributors", email = "opensource@neurolumina.ai" },
]
keywords = [
    "fNIRS", "HD-fNIRS", "PBM", "photobiomodulation",
    "neuroimaging", "signal-processing", "MNE", "SNIRF",
    "brain-health", "cognitive-load", "BCI",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "h5py>=3.8",
    "mne>=1.5",
    "PyWavelets>=1.4.0",
    "scikit-learn>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "sphinx>=7.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
]

[project.urls]
Homepage = "https://neurolumina.ai"
Repository = "https://github.com/neurolumina/nlcore"
Documentation = "https://docs.neurolumina.ai/nlcore"

[tool.setuptools.packages.find]
where = ["."]
include = ["nlcore*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
